# pyvipe

./: README.md  py_vipe.py  pyproject.toml  pyvipe.py  setup.py
completion/bash/: pyvipe  vipe
completion/zsh/: _pyvipe  _vipe
pyvipe/: __main__.py  pyvipe.py
